--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 sudo: true
-language: c++
+language: bash
 
 before_install:
+  - sudo apt-get update -qq && sudo apt-get -y install autoconf automake build-essential cmake git-core libass-dev libegl1-mesa-dev libgles2-mesa-dev libfreetype6-dev libgl1-mesa-dev libglu1-mesa-dev libsdl2-dev libtool libva-dev libvdpau-dev libvorbis-dev libxcb1-dev libxcb-shm0-dev libxcb-xfixes0-dev pkg-config texinfo wget zlib1g-dev
   - git clone https://github.com/Netflix/vmaf.git
 
 install:
-  - sudo apt-get update -qq && sudo apt-get -y install autoconf automake build-essential cmake git-core libass-dev libfreetype6-dev libgl1-mesa-dev libglu1-mesa-dev libsdl2-dev libtool libva-dev libvdpau-dev libvorbis-dev libxcb1-dev libxcb-shm0-dev libxcb-xfixes0-dev pkg-config texinfo wget zlib1g-dev
   - cd vmaf/ptools; make; cd ../wrapper; make; cd ..;
   - sudo make install; cd ..;
 
+script:
+  - ls -la
