--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,15 @@ language: bash
 before_install:
   - sudo apt-get update -qq && sudo apt-get -y install autoconf automake build-essential cmake git-core libass-dev libegl1-mesa-dev libgles2-mesa-dev libfreetype6-dev libgl1-mesa-dev libglu1-mesa-dev libsdl2-dev libtool libva-dev libvdpau-dev libvorbis-dev libxcb1-dev libxcb-shm0-dev libxcb-xfixes0-dev pkg-config texinfo wget zlib1g-dev
   - git clone https://github.com/Netflix/vmaf.git
+  - ls -la ~
+  - mkdir ~/ffmpeg_sources && cd ~/ffmpeg_sources && wget -O ffmpeg-snapshot.tar.bz2 https://ffmpeg.org/releases/ffmpeg-snapshot.tar.bz2 && tar xjvf ffmpeg-snapshot.tar.bz2 && cd ffmpeg
+  - mkdir test; cd test; wget https://www.videvo.net/download_new.php?hash=3d32d9675d16540bf13f988a6d3f2228&test_new_server=1
+
 
 install:
   - cd vmaf/ptools; make; cd ../wrapper; make; cd ..;
   - sudo make install; cd ..;
+  - cp -r vmaf/model .; rm -rf vmaf;
 
 script:
-  - ls -la
-  - mkdir test; cd test; wget https://www.videvo.net/download_new.php?hash=3d32d9675d16540bf13f988a6d3f2228&test_new_server=1
-  - ls -la
+  - ls -la; cd ..;
